# po-utils

./: .hgignore  AUTHORS  BACKLOG  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README-alpha  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.in  hash.c  parser.c  parser.h  parser.y  scanner.c  scanner.l  xpot.c  xpot.h
lib/: ChangeLog  Makefile.am  Makefile.in
m4/: ChangeLog  Makefile.am  Makefile.in
src/: ChangeLog  Makefile.am  Makefile.in  elisp-comp  parser.c  parser.h  parser.y  po-mode.el  scanner.c  scanner.l  xpot.c  xpot.h
web/: gabarit.xsl  site.mk
web/src/: index.html
