AC_INIT(src/xpot.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(po-utils, 0.4)
AM_PATH_LISPDIR
AC_PROG_CC
AM_PROG_LEX
AC_PROG_RANLIB
AC_PROG_YACC
AC_HEADER_STDC
AC_CHECK_HEADERS(values.h)
AC_CHECK_FUNCS(strerror)
jm_FUNC_MALLOC
jm_FUNC_REALLOC
AC_FUNC_VPRINTF
AC_OUTPUT(Makefile lib/Makefile m4/Makefile src/Makefile)
